--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
+    "@google-cloud/storage": "^7.16.0",
+    "@google/genai": "^1.7.0",
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -19,8 +22,10 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
+    "openai": "^5.7.0",
     "prisma": "^6.4.1",
     "zod": "^3.24.2"
   }
