--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prepster-server",
+  "name": "assist-smart-server",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -8,10 +8,13 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/prisma": "^5.0.4",
     "@anthropic-ai/sdk": "^0.54.0",
     "@google-cloud/storage": "^7.16.0",
     "@google/genai": "^1.7.0",
     "@prisma/client": "^6.4.1",
+    "adminjs": "^7.8.16",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
@@ -19,6 +22,8 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
@@ -27,6 +32,7 @@
     "nodemon": "^3.1.9",
     "openai": "^5.7.0",
     "prisma": "^6.4.1",
+    "tslib": "^2.8.1",
     "zod": "^3.24.2"
   }
 }
