--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "prisma": {
+    "seed": "node prisma\\seed.js"
+  },
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
