--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.9",
     "openai": "^5.7.0",
-    "prisma": "^6.4.1",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.13.0"
   }
 }
